src/relish/tui/views/snapshots/reliaburger__relish__tui__views__help__tests__events.snap
---
source: src/relish/tui/views/help.rs
expression: "render_to_string(&app, 120, 40)"
---
 RELISH  3 nodes · 3 apps · leader node-1 · CONNECTED                                                                   
                                                                                                                        
┌events────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│TIME      SEV       KIND            NODE         APP              MESSAGE                                             │
│15:05:40  Info Health -            web              fixture event 1                                                   │
│15:05:50  Info Health -            web              fixture event 2                                                   │
│15:06:00  Info Health -            web              fixture event 3                                                   │
│15:06:10  Info Health -            web              fixture event 4                                                   │
│15:06:20  Info Health -            web              fixture event 5                                                   │
│15:06:30  Info Deploy -            web              fixture event 6                                                   │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 [a]pps [n]odes [j]obs [e]vents [l]ogs [r]outes [s]earch [?]help [:]cmd [q]uit
