src/relish/tui/views/snapshots/reliaburger__relish__tui__views__help__tests__jobs.snap
---
source: src/relish/tui/views/help.rs
expression: "render_to_string(&app, 120, 40)"
---
 RELISH  3 nodes · 3 apps · leader node-1 · CONNECTED                                                                   
                                                                                                                        
┌jobs──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│NAME                 NODE         NS           STATE        RESTARTS  AGE      IMAGE                                  │
│migrate              node-1       default      stopped             0      60s  proc-grill:image-ignored               │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 [a]pps [n]odes [j]obs [e]vents [l]ogs [r]outes [s]earch [?]help [:]cmd [q]uit
