src/relish/tui/views/snapshots/reliaburger__relish__tui__views__help__tests__logs.snap
---
source: src/relish/tui/views/help.rs
expression: "render_to_string(&app, 120, 40)"
---
 RELISH  3 nodes · 3 apps · leader node-1 · CONNECTED                                                                   
                                                                                                                        
┌logs──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│web · default · follow on                                                                                             │
│live logs from every node running the app                                                                             │
│web-0 │ request completed                                                                                             │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 [a]pps [n]odes [j]obs [e]vents [l]ogs [r]outes [s]earch [?]help [:]cmd [q]uit
